--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -1,4 +1,4 @@
-main {
+.main {
     display: flex;
     flex-direction: column;
     max-width: 100vw;
@@ -88,20 +88,8 @@ main {
     opacity: 0.6;
 }
 
-input[type="text"], input[type="password"],input[type="email"] {
-    border: none;
-    margin-top: 40px;
-    border-radius: 60px;
-    padding: 8px 0 8px 35px;
-    outline: none;
-    width: 100%;
-    background-color: whitesmoke;
-  }
-
-  
-
 @media (min-width: 640px) {
-    main {
+    .main {
         flex-direction: row;
     }
     .illustration {
