--- a/app/(routes)/carona-confirmada/page.module.css
+++ b/app/(routes)/carona-confirmada/page.module.css
@@ -1,9 +1,17 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   width: 100vw;
   min-height: 100vh;
+}
+
+.caronaConfirmada {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .confirmationImage {
@@ -14,10 +22,9 @@
   background-color: #CF080F; 
   color: #ffffff; 
   border-color: #ffffff; 
+  cursor: pointer;
 }
 
 .btnPrimary:hover {
-  background-color: #ffffff; 
-  color: #000000; 
-  border-color: #000000; 
+  opacity: 0.7;
 }
